tooltip and some alignment fixed

--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ body{
 
 .rightbox {
   border: 5px solid;
-  width: 500px;
+  width: 420px;
   height: 120px;
   left: 50%;
   top: 30px;
@@ -57,9 +57,8 @@ body{
 
 .container> div {
   display: inline-block;
-  margin: 2%;
-  padding: 5px;
-
+  margin: 1%;
+  padding: 2px;
 }
 
 .title {
